@@ -1,4 +1,4 @@
-/* $OpenBSD: auth-bsdauth.c,v 1.11 2007/09/21 08:15:29 djm Exp $ */
+/* $OpenBSD: auth-bsdauth.c,v 1.12 2014/03/12 04:50:32 djm Exp $ */
 /*
  * Copyright (c) 2001 Markus Friedl.  All rights reserved.
  *
@@ -53,6 +53,11 @@ bsdauth_query(void *ctx, char **name, char **infotxt,
 {
 	Authctxt *authctxt = ctx;
 	char *challenge = NULL;
+
+	*infotxt = NULL;
+	*numprompts = 0;
+	*prompts = NULL;
+	*echo_on = NULL;
 
 	if (authctxt->as != NULL) {
 		debug2("bsdauth_query: try reuse session");
